--- a/app/page.mdx
+++ b/app/page.mdx
@@ -2,22 +2,21 @@ import { NameTransition } from './name';
 
 <NameTransition />
 
-I'm a frontend developer, optimist, and community builder. I work at [Vercel](/work), where I teach the [Next.js](/n/stack) community, an open-source web framework built with React.
+Hi! I&apos;m{" "}
+        <span className="text-white font-semibold">Jorge Delgadillo</span> a
+        developer residing in Guadalajara, México, currently working as an
+        independent Software Engineer. My field of interests is quite extensive,
+        ranging from web & app development to music production.
 
-## Writing
+{/* ## Writing
 
-- [On Developer Experience](/n/dx)
-- [On Developer Marketing](/n/developer-marketing)
-- [On Developer Relations](/n/devrel)
-- [On Developer Products](/n/devtools)
-- [On Community Moderation](/n/moderation)
-- [Rust is Eating JavaScript](/n/rust)
-- [Product Engineers](/n/product-engineers)
 - [My Stack](/n/stack)
-- [Understanding AI](/n/ai)
+
 
 ## Code
 
-- [next-saas-starter](https://github.com/leerob/next-saas-starter)
-- [next-email-client](https://github.com/leerob/next-email-client)
-- [next-music-player](https://github.com/leerob/next-music-player)
+- [saas-starter](https://github.com/leerob/next-saas-starter)
+
+## Art
+
+- [alwaysjad](https://alwaysjad.com) */}
