update profile pic and code page

--- a/app/code/page.mdx
+++ b/app/code/page.mdx
@@ -1,16 +1,14 @@
-import { AnimatedName } from '../n/animated-name';
-
+import { AnimatedName } from "../n/animated-name";
 
 export const metadata = {
-    title: 'code',
+  title: "code",
   alternates: {
-      canonical: '/code',
+    canonical: "/code",
   },
 };
-
 
 # Code Projects
 
 <AnimatedName />
 
-- [My Stack](/n/stack)
+- [Tu Cielo de Noche](/n/tu-cielo-de-noche)
