update code page

--- a/app/n/tu-cielo-de-noche/page.mdx
+++ b/app/n/tu-cielo-de-noche/page.mdx
@@ -9,6 +9,4 @@ export const metadata = {
 
 # Tu Cielo de Noche
 
-<AnimatedName />
-
-# hola
+<AnimatedName /># website link > [Tu Cielo de Noche](https://tucielodenoche.com)
