update code page

--- a/app/n/tu-cielo-de-noche/page.mdx
+++ b/app/n/tu-cielo-de-noche/page.mdx
@@ -10,3 +10,5 @@ export const metadata = {
 # Tu Cielo de Noche
 
 <AnimatedName /># website link > [Tu Cielo de Noche](https://tucielodenoche.com)
+
+# Soon, I'll share the complete development story of Tu Cielo de Noche, from initial concept to launch. Expect insights into the project's stack: Next.js, TypeScript, Tailwind CSS, Supabase, Stripe, Canvas, AWS SQS/Lambda.
