--- a/app/page.mdx
+++ b/app/page.mdx
@@ -3,7 +3,7 @@ import Image from "next/image";
 
 <NameTransition />
 
-Hi! I&apos;m a developer, an optimist, and a problem solver from Guadalajara, México, currently working as an independent Software Engineer. My
+Hi! I&apos;m a developer, an optimist, and a problem solver from Guadalajara, México. Currently working as an independent Software Engineer. My
 field of interests is quite extensive, ranging from web n' app development to music
 production.
 
