tcdn blog post writing

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -4,7 +4,7 @@ import Image from "next/image";
 <NameTransition />
 
 Hi! I&apos;m a developer, an optimist, and a problem solver from Guadalajara, México. Currently working as an independent Software Engineer. My
-field of interests is quite extensive, ranging from web n' app development to music
+field of interests is quite extensive, ranging from web and app development to music
 production.
 
 <Image
