--- a/app/writing/page.mdx
+++ b/app/writing/page.mdx
@@ -1,16 +1,15 @@
-import { AnimatedName } from '../n/animated-name';
-
+import { AnimatedName } from "../n/animated-name";
 
 export const metadata = {
-    title: 'writing',
+  title: "writing",
   alternates: {
-      canonical: '/writing',
+    canonical: "/writing",
   },
 };
-
 
 # Writing
 
 <AnimatedName />
 
 - [My Stack](/n/stack)
+- [The AI Revolution](/n/The-AI-Revolution)
