--- a/app/writing/page.mdx
+++ b/app/writing/page.mdx
@@ -11,5 +11,6 @@ export const metadata = {
 
 <AnimatedName />
 
-- [My Stack](/n/stack)
+{/* - [My Stack](/n/stack) */}
+
 - [The AI Revolution](/n/The-AI-Revolution)
