--- a/app/c/tu-cielo-de-noche/page.mdx
+++ b/app/c/tu-cielo-de-noche/page.mdx
@@ -1,4 +1,5 @@
 import { AnimatedName } from "../animated-name.tsx";
+import mdxComponents from "../mdx-components";
 
 export const metadata = {
   title: "Tu Cielo de Noche",
@@ -7,9 +8,9 @@ export const metadata = {
   },
 };
 
-# Tu Cielo de Noche
+# Tu Cielo de Noche<AnimatedName />
 
-<AnimatedName /># website link > [Tu Cielo de Noche](https://tucielodenoche.com)
+#website link [Tu Cielo de Noche](https://tucielodenoche.com)
 
 # Mapping the Cosmos: Building a Microservice-Driven Celestial Map Generator
 
