new blog post, and changed undr to eh music protfolio

--- a/app/c/music-portfolio/page.mdx
+++ b/app/c/music-portfolio/page.mdx
@@ -7,11 +7,11 @@ export const metadata = {
   },
 };
 
-# UNDR
+# Edgar Huerta Music Portfolio
 
 <AnimatedName />
 
-#website link [UNDR](https://undr-jaddelgadillos-projects.vercel.app/)
+#website link [Music Portfolio](https://eh-025.vercel.app/)
 
 ## Crafting an Aesthetic Music Portfolio with Next.js and Framer Motion
 
