--- a/app/writing/page.mdx
+++ b/app/writing/page.mdx
@@ -13,4 +13,4 @@ export const metadata = {
 
 {/* - [My Stack](/n/stack) */}
 
-- [The AI Revolution](/n/The-AI-Revolution)
+- [The Rise of the AI Engineer](/n/The-Rise-of-the-AI-Engineer)
