--- a/app/code/page.mdx
+++ b/app/code/page.mdx
@@ -12,4 +12,4 @@ export const metadata = {
 <AnimatedName />
 
 - [Tu Cielo de Noche](/c/tu-cielo-de-noche)
-- [UNDR](/c/undr)
+- [EH Music Portfolio](/c/music-portfolio)
