post url update

--- a/app/c/music-portfolio/page.mdx
+++ b/app/c/music-portfolio/page.mdx
@@ -3,7 +3,7 @@ import { AnimatedName } from "../animated-name.tsx";
 export const metadata = {
   title: "UNDR",
   alternates: {
-    canonical: "/code/undr",
+    canonical: "/code/Edgar-Huerta-Music-Portfolio",
   },
 };
 
