--- a/app/n/The-Rise-of-the-AI-Engineer/page.mdx
+++ b/app/n/The-Rise-of-the-AI-Engineer/page.mdx
@@ -3,7 +3,7 @@ import { AnimatedName } from "../animated-name.tsx";
 export const metadata = {
   title: "Tu Cielo de Noche",
   alternates: {
-    canonical: "/code/tu-cielo-de-noche",
+    canonical: "/code/The-Rise-of-the-AI-Engineer",
     date: "2025-06-10",
   },
 };
