post url update

--- a/app/c/music-portfolio/page.mdx
+++ b/app/c/music-portfolio/page.mdx
@@ -1,7 +1,7 @@
 import { AnimatedName } from "../animated-name.tsx";
 
 export const metadata = {
-  title: "UNDR",
+  title: "EH Music Portfolio",
   alternates: {
     canonical: "/code/Edgar-Huerta-Music-Portfolio",
   },
