--- a/app/n/The-Rise-of-the-AI-Engineer/page.mdx
+++ b/app/n/The-Rise-of-the-AI-Engineer/page.mdx
@@ -1,7 +1,7 @@
 import { AnimatedName } from "../animated-name.tsx";
 
 export const metadata = {
-  title: "Tu Cielo de Noche",
+  title: "The Rise of the AI Engineer",
   alternates: {
     canonical: "/code/The-Rise-of-the-AI-Engineer",
     date: "2025-06-10",
