update, image skeleton for hero

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -7,10 +7,9 @@ Hi! I&apos;m a developer, an optimist, and a problem solver from Guadalajara, MÃ
 field of interests is quite extensive, ranging from web and app development to music
 production.
 
-<Image
+<SkeletonImage
   src="/images/profile.jpg"
   alt="Jorge Delgadillo"
-  width={400}
-  height={400}
-  className="rounded-lg"
+  width={300}
+  height={300}
 />
