PostLink component update

--- a/app/writing/page.mdx
+++ b/app/writing/page.mdx
@@ -1,16 +1,14 @@
 import { AnimatedName } from "../n/animated-name";
-
-export const metadata = {
-  title: "writing",
-  alternates: {
-    canonical: "/writing",
-  },
-};
+import { PostLink } from "../../components/PostLink";
 
 # Writing
 
 <AnimatedName />
 
-{/* - [My Stack](/n/stack) */}
-
-- [The Rise of the AI Engineer](/n/The-Rise-of-the-AI-Engineer)
+<ul>
+  <PostLink
+    title="The Rise of the AI Engineer"
+    href="/n/The-Rise-of-the-AI-Engineer"
+    date="June 10 2025"
+  />
+</ul>
