--- a/app/code/page.mdx
+++ b/app/code/page.mdx
@@ -12,4 +12,5 @@ export const metadata = {
 <AnimatedName />
 
 - [Tu Cielo de Noche](/c/tu-cielo-de-noche)
+- [Leet Mentor](/c/leet-mentor)
 - [EH Music Portfolio](/c/music-portfolio)
