change to light color theme

--- a/app/page-content.mdx
+++ b/app/page-content.mdx
@@ -1,11 +1,11 @@
 import { NameTransition } from "./name";
 import Image from "next/image";
+import { Link } from "next-view-transitions";
+import { SkeletonImage } from "@/components/SkeletonImage";
 
 <NameTransition />
 
-Hi! I&apos;m a developer, an optimist, and a problem solver from Guadalajara, México. Currently working as an independent Software Engineer. My
-field of interests is quite extensive, ranging from web and app development to music
-production.
+Hi! I’m Jorge, a software engineer and product builder. Creator of <Link className='text-blue-500 underline hover:text-blue-800' href="/c/tu-cielo-de-noche"> Tu Cielo de Noche </Link>, a SaaS platform, and <Link className='text-blue-500 underline hover:text-blue-800' href="/c/leet-mentor"> Leet Mentor </Link>, an AI-powered coding technical interviewer.
 
 <SkeletonImage
   src="/images/profile.jpg"
