change to light color theme

--- a/app/n/The-Rise-of-the-AI-Engineer/page.mdx
+++ b/app/n/The-Rise-of-the-AI-Engineer/page.mdx
@@ -8,7 +8,8 @@ export const metadata = {
   },
 };
 
-# The Rise of the AI Engineer: A New Software Role Is Emerging <AnimatedName />
+# The Rise of the AI Engineer: A New Software Role Is Emerging 
+<AnimatedName />
 
 <p className="text-sm text-gray-500">Published: June 10, 2025</p>
 
