--- a/app/page-content.mdx
+++ b/app/page-content.mdx
@@ -1,15 +1,15 @@
 import { NameTransition } from "./name";
 import Image from "next/image";
-import { Link } from "next-view-transitions";
+import Link from "next/link";
 import { SkeletonImage } from "@/components/SkeletonImage";
 
 <NameTransition />
 
-Hi! I’m Jorge, a software engineer and product builder. Creator of <Link className='text-blue-500 underline hover:text-blue-800' href="/c/tu-cielo-de-noche"> Tu Cielo de Noche </Link>, a SaaS platform, and <Link className='text-blue-500 underline hover:text-blue-800' href="/c/leet-mentor"> Leet Mentor </Link>, an AI-powered coding technical interviewer.
+Hi! I’m Jorge, a software engineer and product builder. Creator of <Link className='text-blue-500 underline hover:text-blue-800' href="/c/tu-cielo-de-noche"> Tu Cielo de Noche</Link>, a SaaS platform, and <Link className='text-blue-500 underline hover:text-blue-800' href="/c/leet-mentor"> Leet Mentor</Link>, an AI-powered coding technical interviewer. <br/> Let's <Link className='text-blue-500 underline hover:text-blue-800' href="mailto:jorge.aldem@gmail.com" target='_blank'> connect</Link>.
 
 <SkeletonImage
   src="/images/profile.jpg"
   alt="Jorge Delgadillo"
-  width={320}
-  height={320}
+  width={1320}
+  height={1320}
 />
