--- a/app/writing/page.mdx
+++ b/app/writing/page.mdx
@@ -4,11 +4,13 @@ import { PostLink } from "../../components/PostLink";
 # Writing
 
 <AnimatedName />
-
-<ul>
+<ul className="">
+<li>
+-
   <PostLink
     title="The Rise of the AI Engineer"
     href="/n/The-Rise-of-the-AI-Engineer"
     date="June 10 2025"
   />
+</li>
 </ul>
