--- a/app/c/tu-cielo-de-noche/page.mdx
+++ b/app/c/tu-cielo-de-noche/page.mdx
@@ -7,7 +7,8 @@ export const metadata = {
   },
 };
 
-# Tu Cielo de Noche<AnimatedName />
+# Tu Cielo de Noche
+<AnimatedName />
 
 #website link [Tu Cielo de Noche](https://tucielodenoche.com)
 
