cobriq article added

--- a/app/c/music-portfolio/page.mdx
+++ b/app/c/music-portfolio/page.mdx
@@ -1,9 +1,9 @@
 import { AnimatedName } from "../animated-name.tsx";
 
 export const metadata = {
-  title: "EH Music Portfolio",
+  title: "Music Portfolio",
   alternates: {
-    canonical: "/code/Edgar-Huerta-Music-Portfolio",
+    canonical: "/code/Music-Portfolio",
   },
 };
 
