--- a/app/code/page.mdx
+++ b/app/code/page.mdx
@@ -12,5 +12,6 @@ export const metadata = {
 <AnimatedName />
 
 - [Tu Cielo de Noche](/c/tu-cielo-de-noche)
+- [Cobriq](/c/cobriq)
 - [Leet Mentor](/c/leet-mentor)
-- [EH Music Portfolio](/c/music-portfolio)
+- [Music Portfolio](/c/music-portfolio)
